--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <img src="logo.png" alt="logo" id="logo">
-    <h1>I'm <span id="name">Chitti</span> , Your <span id="va">Your Virtual Assistant</span></h1>
+    <h1>I'm <span id="name">Chitti</span> , Your <span id="va">Virtual Assistant</span></h1>
     <img src="voice-unscreen.gif" alt="voice" id="voice">
     <button id="btn"><img src="mic.svg" alt="mic"><span id="content">Click here to talk</span></button>
     <script src="script.js"></script>
